--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,4 +13,5 @@ jobs:
   sonarcloud:
     name: sonarcloud
     uses: affinidi/pipeline-security/.github/workflows/security-scanners.yml@feat-sonarcloud
-    secrets: inherit
+    secrets: 
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
