--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -12,6 +12,10 @@ on:
 jobs:
   sonarcloud:
     name: sonarcloud
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     uses: affinidi/pipeline-security/.github/workflows/security-scanners.yml@feat-sonarcloud
     secrets: 
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
