--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,20 +2,18 @@ name: Security Testing
 
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
   pull_request:
-    types: [opened, synchronize, reopened]
-
+    branches: [ "master" ]
 
 
 jobs:
-  sonarcloud:
-    name: sonarcloud
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+  security-testing:
+    name: security-testing
     uses: affinidi/pipeline-security/.github/workflows/security-scanners.yml@feat-sonarcloud
-    secrets: 
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    secrets:
+      SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
