--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,9 +2,8 @@ name: Security Testing
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
+  pull_request: {}
 
 
 jobs:
