--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -17,3 +17,4 @@ jobs:
       actions: read
     secrets:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
+      GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
