--- a/.github/workflows/crda.yml
+++ b/.github/workflows/crda.yml
@@ -93,10 +93,10 @@ jobs:
       #    - Python: https://github.com/actions/setup-python
       #
       # Example:
-      # - name: Setup Node
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: '16'
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+           node-version: '16'
 
       # https://github.com/redhat-actions/openshift-tools-installer/blob/main/README.md
       - name: Install CRDA CLI
