--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   dependency-review:
     runs-on: ubuntu-latest
+    if: github.base_ref == 'master'
     steps:
       - name: 'Checkout Repository'
         uses: actions/checkout@v3
